--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,393 @@
-@import url(https://fonts.googleapis.com/css?family=Sintony);
-@import "common.css";
-@import "header.css";
-@import "main.css";
-@import "footer.css";
+@import url("https://fonts.googleapis.com/css?family=Sintony");
+
+html {
+    overflow-x: hidden;
+}
+
+body {
+    font-family: "Sintony";
+    margin: 0;
+    padding: 0;
+    overflow-x: hidden;
+}
+
+.wrapper {
+    max-width: 995px;
+    margin: 0 auto;
+    min-width: 290px;
+}
+
+.inner-wrapper {
+    margin: 0 6px;
+}
+
+@media all and (min-width: 768px) and (max-width: 1024px) {
+    .wrapper {
+        max-width: 768px;
+    }
+}
+
+@media all and (max-width: 768px) {
+    .wrapper {
+        max-width: 90%;
+    }
+}
+
+.header {
+    position: relative;
+    background-image: url(../img/Shape.jpg) center no-repeat / cover;
+    height: 645px;
+    width: 100vw;
+}
+
+.header .wrapper {
+    padding-top: 40px;
+}
+
+#background-man {
+    position: absolute;
+    left: 50%;
+    top: 30px;
+    z-index: 100;
+    width: 448px;
+    height: 652px;
+    background-image: url(../img/bio.jpg) center no-repeat / contain;
+
+}
+
+.links {
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+.logo::before {
+    content: "";
+    background: url(../img/Rectangle.jpg) center no-repeat / contain;
+    width: 47px;
+    height: 4px;
+    display: inline-block;
+}
+
+.header__title {
+    max-width: 100%;
+    margin: 137px 0 0 0;
+    display: block;
+}
+
+.header__description {
+    margin: 30px 0 0 0;
+    max-width: 50%;
+    font: 20px / normal "Georgia";
+    font-style: italic;
+    line-height: 1.5;
+    text-align: left;
+    color: #91daf6;
+}
+
+@media all and (max-width: 768px) {
+    #background-man {
+        left: 60%;
+    }
+}
+
+@media all and (max-width: 425px) {
+    .header {
+        height: 505px;
+    }
+
+    .header__description {
+        max-width: 70%;
+    }
+
+    .header__title {
+        margin-top: 77px;
+    }
+
+    #background-man {
+        top: 191.5px;
+        width: 258px;
+        height: 332px;
+    }
+}
+
+.main {
+    position: relative;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 10;
+    padding-bottom: 56px;
+}
+
+.ill-works__container .wrapper {
+    padding-top: 55px;
+}
+
+.works__title {
+    margin: 0;
+    text-transform: uppercase;
+    color: #0099ff;
+    font: 30px / normal "Sintony";
+}
+
+.works__description {
+    margin: 30px 0 0 0;
+    font: 13px / normal "Georgia";
+    font-style: italic;
+    line-height: 1.85;
+    max-width: 50vw;
+    color: #858585;
+}
+
+.slider {
+    max-width: 100%;
+    margin: 35px 0 30px 0;
+    display: grid;
+    grid-gap: auto;
+    grid-template-rows: 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+}
+
+.slider-img {
+    width: 190px;
+    height: 159px;
+    border-radius: 5px;
+    background-color: #abbcc3;
+}
+
+.slider-buttons {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: calc(15px * 5 + 10px * 3);
+}
+
+.slider-button {
+    box-sizing: border-box;
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    border: 3px solid #00aeef;
+}
+
+.graph-works__container .wrapper {
+    margin-top: 50px;
+}
+
+.corp-works__container .wrapper {
+    margin-top: 45px;
+}
+
+.content-block:first-child {
+    margin-right: 15px;
+}
+
+.experience__container .inner-wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+.experience__container .works__description {
+    margin-top: 23px;
+}
+
+@media all and (min-width: 768px) and (max-width: 1024px) {
+    .slider {
+        grid-template-rows: 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        grid-gap: 5px;
+    }
+}
+
+@media all and (max-width: 768px) {
+    .slider {
+        grid-gap: 5px;
+        grid-template-columns: 1fr 1fr 1fr;
+    }
+}
+
+@media all and (min-width: 425px) and (max-width: 660px) {
+    .slider {
+        grid-template-rows: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
+    }
+}
+
+@media all and (max-width: 425px) {
+    .slider {
+        grid-template-rows: 1fr;
+        grid-template-columns: 1fr;
+    }
+
+    .slider-img {
+        display: none;
+    }
+
+    .slider-img:first-child {
+        display: block;
+        width: 100%;
+        height: calc(190px * 1.2);
+    }
+
+    .experience__container .inner-wrapper {
+        flex-direction: column;
+    }
+
+    .inner-wrapper .content-block {
+        margin-top: 30px;
+    }
+}
+
+.footer {
+    background-color: rgb(21, 28, 39);
+    height: 462px;
+    width: 100vw;
+}
+
+.footer .wrapper {
+    padding-top: 40px;
+}
+
+.contact {
+    display: flex;
+}
+
+.footer .works__description {
+    margin: 45px 0 27px 0;
+    color: #2c3b52;
+    font-size: 14px;
+}
+
+.email-content {
+    width: 55%;
+}
+
+.email-btn {
+    padding: 0 35px;
+    width: 100%;
+    height: 75px;
+    border: none;
+    box-sizing: border-box;
+    border-radius: 4px;
+    outline: none;
+    background-color: #080c11;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+
+.email-btn::after {
+    content: "";
+    width: 28px;
+    height: 20px;
+    background: url(../img/email.png) center no-repeat / contain;
+}
+
+.email-txt {
+    width: 100%;
+    text-align: left;
+    font: 18px / normal "Sintony";
+    line-height: 1.39;
+    text-transform: uppercase;
+    color: #ffffff;
+}
+
+.social-wrapper {
+    display: flex;
+    justify-content: flex-end;
+    width: 45%;
+    margin-right: 12px;
+}
+
+.social-networks {
+    display: flex;
+    justify-content: space-between;
+    width: calc(60px * 4 + 20px * 2);
+}
+
+.social-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 60px;
+    height: 57px;
+}
+
+.rss {
+    background-color: #ffaa16;
+    box-shadow: inset 0px -3px 0 0 #d38600;
+}
+
+.ball {
+    box-shadow: inset 0px -3px 0 0 #d30054;
+    background-color: #ec5b95;
+}
+
+.twitter {
+    box-shadow: inset 0px -3px 0 0 #0081b1;
+    background-color: #00aeef;
+}
+
+.fb {
+    box-shadow: inset 0px -3px 0 0 #003a72;
+    background-color: #0054a6;
+}
+
+#fb {
+    width: 14px;
+    height: 26px;
+    background: url(../img/face.png) center no-repeat/contain;
+}
+
+#ball {
+    width: 29px;
+    height: 29px;
+    background: url(../img/ball.png) center no-repeat/contain;
+}
+
+#twitter {
+    width: 33px;
+    height: 24px;
+    background: url(../img/bird.png) center no-repeat/contain;
+}
+
+#rss {
+    width: 22px;
+    height: 22px;
+    background: url(../img/wifi.png) center no-repeat/contain;
+}
+
+.down-info {
+    display: block;
+    max-width: 100%;
+    text-align: center;
+    opacity: 0.5;
+    margin-top: 20%;
+    color: #fff;
+    font: 14px / normal "Sintony";
+}
+
+@media all and (max-width: 768px) {
+    .contact {
+        flex-direction: column;
+    }
+
+    .email-content {
+        width: 100%;
+    }
+
+    .works__description {
+        max-width: 100%;
+    }
+
+    .social-wrapper {
+        justify-content: center;
+        width: 100%;
+        margin-top: 30px;
+        margin-right: 0;
+    }
+
+    .down-info {
+        margin-top: 15%;
+    }
+}
